yaml/jenkins_vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: acmeair-jmeter
spec:
  gateways:
  - jmeter-gw
  hosts:
  - '*'
  http:
  - route:
    - destination:
        host: acmeair-flight-service
        port:
          number: 9080
